ghc/tests/typecheck/should_fail/tcfail075.stderr
tcfail075.hs:9:1: parse error on input: "y"
